# rift

./: .gitignore  CMakeLists.txt  Makefile  README.md  abstract_state.h  ast.cpp  ast.h  boxing_removal.cpp  boxing_removal.h  compiler.cpp  compiler.h  export.rb  gc.cpp  gc.h  hw.patch  lex.cpp  lex.h  lexer.cpp  lexer.h  llvm.h  main.cpp  parse.cpp  parse.h  parser.h  pool.cpp  pool.h  readme.txt  runtime.cpp  runtime.h  specialize.cpp  specialize.h  specializedRuntime.h  spillRegistersAndScanStack.asm  tests.cpp  tests.h  type_analysis.cpp  type_analysis.h  type_checker.cpp  type_checker.h  unboxing.cpp  (+2 more)
assignments/: day1.md  day2.md
local/: cmake.cmake  cmake.cmake.default
notes/: Intro_to_Language_Implem.rtf  Intro_to_Rift.md  Intro_to_Rift.ri  cmake.md  rift_specification.md
src/: abstract_state.h  ast.cpp  ast.h  boxing_removal.cpp  boxing_removal.h  compiler.cpp  compiler.h  die.cpp  die.h  gc.cpp  gc.h  lexer.cpp  lexer.h  llvm.h  main.cpp  objects.h  parser.h  pool.cpp  pool.h  rift.h  runtime.cpp  runtime.h  rval.h  specialize.cpp  specialize.h  specializedRuntime.h  tests.cpp  tests.h  type_analysis.cpp  type_analysis.h  type_checker.cpp  type_checker.h  unboxing.cpp  unboxing.h
src/compiler/: compiler.cpp  compiler.h  jit.cpp  jit.h  memory_manager.h  module.cpp  module.h  types.cpp  types.h
src/utils/: print.cpp  printer.h
teaching/: notes.md
tests/: 1.ri  2.ri  3.ri  4.ri  fib.ri  gc.ri  simplest.ri  test.ri
